--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
-form{
+/*form{
     background-color: #12343b;
    padding:1px 10px 1px 10px;
   margin: 0.25px 70px 300px 400px;
     display:block;
    text-align: center;
    /*height:400px;*/
-   height: 60vh;
+  /* height: 60vh;
    width: 500px;
    border-radius: 40px;
    color: white;
@@ -79,7 +79,7 @@ nav ul{
 nav a{
     text-decoration:none;
    /* text-align:center;*/
-   display:block;
+  /* display:block;
    padding:10px;
 }
 
@@ -88,7 +88,8 @@ nav a:hover{
     width: 180px;
 }
 
-/*flex styles*/@media screen and (min-width:768px){
+/*flex styles*/
+/*@media screen and (min-width:768px){
 
     nav ul{
         display:flex;
@@ -100,4 +101,230 @@ nav a:hover{
     }
 
     @media all and 
+}*/
+
+/*
+COLORS:
+
+Light green:#7ed5f
+Medium green:#55c57a
+Dark green:#28b485
+*/
+.topnav {
+    background-color:#12343b;
+    overflow: hidden;
+ }
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color:rgb(116, 172, 33);
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color:green;
+    color: white;
+  }
+  
+.a:hover{
+    color:red;
+}
+
+*,
+*::after,
+*::before{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+html{
+font-size:62.5%;
+}
+
+body{
+font-family: "Lato",sans-serif;
+font-weight:400;
+/*font-size:16px;*/
+line-height:1,7;
+color: darkgrey;
+padding: 3rem;
+background-image: linear-gradient(
+    to right bottom,
+    rgba(0, 139, 139, 0.8),
+#12343b),
+url(../images/bckgrnd.jpg);
+}
+
+.header{
+height: 95vh;
+background-image: linear-gradient(
+    to right bottom,
+    rgba(0, 139, 139, 0.8),
+#12343b),
+url(../images/bckgrnd.jpg);
+background-size: cover;
+background-position: top;
+position: relative;
+clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
+}
+
+.header__logo-box{
+position: absolute;
+top: 4rem;
+left: 4rem;
+}
+
+.header__logo{
+height: 3.5rem;
+}
+
+.logo:hover{
+animation:moveInRight is ease-out;
+
+}
+
+.header__text-box{
+position: absolute;
+top: 30%;
+left: 20%;
+transform: translate(-50% -50%);
+text-align: center;
+}
+
+.heading-primary{
+color:#fff;
+text-transform:uppercase;
+backface-visibility: hidden;
+margin-bottom: 6rem;
+}
+
+.heading-primary--main{
+display: block;
+font-size: 6rem;
+font-weight: 400;
+letter-spacing: 3.5rem;
+animation-name: moveInLeft;
+animation-duration: 1s;
+animation-timing-function: ease-out;
+/*
+animation-delay:3s;
+an
+*/
+}
+
+.heading-primary--sub{
+display: block;
+font-size: 2rem;
+font-weight: 700;
+letter-spacing: 1.75rem;
+animation:moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft{
+0%{
+    opacity: 0;
+    transform: translateX(-10rem);
+}
+
+80%{
+    transform: translateX(-1rem);
+}
+
+100%{
+    opacity: 1;
+    transform: translate(0);
+}
+}
+
+@keyframes moveInRight{
+0%{
+    opacity: 0;
+    transform: translateX(10rem);
+}
+
+80%{
+    transform: translateX(-1rem);
+}
+
+100%{
+    opacity: 1;
+    transform: translate(0);
+}
+}
+
+@keyframes moveInBottom{
+0%{
+    opacity: 0;
+    transform:translateY(3rem);
+}
+
+100%{
+    opacity:1;
+    transform:translate(0);
+}
+}
+
+.btn:link,
+.btn:visited{
+text-transform: uppercase;
+text-decoration: none;
+padding: 1.5rem 4rem;
+display:inline-block;
+border-radius: 10rem;
+transition: all.2s;
+position: relative;
+font-size: 1.6rem;
+}
+
+.btn:hover{
+transform: translateY(-.3rem);
+box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+}
+
+.btn:active{
+transform:translateY(-.1rem);
+box-shadow: .5rem 1rem rgba(0,0,0,.2);
+}
+
+.btn--white{
+background-color: #fff;
+color: #777;
+}
+
+.btn::after{
+content: "";
+display: inline-block;
+height: 100%;
+width:100%;
+border-radius: 10rem;
+position: absolute;
+top: 0;
+left: 0;
+z-index: -1;
+transition: all .4s;
+}
+
+.btn--white::after{
+background-color: #fff;
+}
+
+.btn:hover::after{
+transform:scaleX(1.4) scaleY(1.6);
+opacity: 0;
+}
+
+.btn--animated{
+animation: moveInBottom .5s ease-out .75s;
+animation-fill-mode: backwards;
 }
